--- a/lishiye.html
+++ b/lishiye.html
@@ -84,7 +84,7 @@
 </div>
 <div class="main">
 <h2>相关视频</h2>
-<video src="images/xhsxcp.mp4" muted autoplay controls></video>
+<video src="images/xcp.mp4" muted autoplay controls></video>
 </div>
     <div class="footer">
         阳光花城————攀枝花 @ 版权所有 -2025
